# meta-pipeline-MAGDrep

./: .gitignore  CLAUDE.md  Makefile  README.md  Snakefile  conda-lock.txt  environment.yml  meta-pipeline-MAGDrep  meta-pipeline-MAGQC  meta-pipeline-MAGQC_build_instructions.md  mkdocs.yml  pyproject.toml
config/: config.yaml
config/profiles/gcp/: config.yaml
config/profiles/local/: config.yaml
config/profiles/slurm/: config.yaml
container/: Dockerfile  environment.yml
databases/: download.py
docs/: index.md  installation.md  program-guide.md  quickstart.md
docs/deployment/: gcp.md  slurm.md
docs/outputs/: combined-report.md
docs/pipeline/: checkm2.md  dereplicate.md  genome-stats.md  gtdbtk.md  gunc.md  overview.md
docs/usage/: configuration.md  inputs-outputs.md
envs/: checkm1.yml
rules/: aggregate.smk  checkm1.smk  checkm2.smk  common.smk  dereplicate.smk  genome_stats.smk  gtdbtk.smk  gunc.smk
scripts/: dereplicate.py  genome_stats.py  merge_reports.py  run_checkm1.py  run_checkm2.py  run_gtdbtk.py  run_gunc.py
src/meta_pipeline_magdrep/: cli.py  config.py  inputs.py  rename.py  resources.py  runner.py
src/meta_pipeline_magqc/: cli.py  config.py  resources.py
tests/: conftest.py  hpc_test.sh  test_checkm1.py  test_checkm2.py  test_cli.py  test_config.py  test_dereplicate.py  test_genome_stats.py  test_gtdbtk.py  test_gunc.py  test_inputs.py  test_integration.py  test_merge_reports.py  test_rename.py  test_runner.py
tests/data/: download_test_genomes.py  test_genomes_manifest.tsv
tests/data/mags/: synthetic_mag_001.fna  (+1 more)
(+3 files in other folders)
