[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-pipeline-MAGDrep"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "snakemake>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
meta-pipeline-MAGDrep = "meta_pipeline_magdrep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: marks tests as slow (requires installed tools and databases)"]
